fix scrollbar

--- a/authentication-app/src/app/pages/register/register.scss
+++ b/authentication-app/src/app/pages/register/register.scss
@@ -1,17 +1,17 @@
 .content {
-  height: 92vh;
-  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #e0e0e0;
-  overflow: hidden;
+  padding: 20px;
+  flex: 1;
 }
 
 form {
   display: flex;
   flex-direction: column;
-  width: 750px;
+  max-width: 750px;
+  width: 90%;
   padding: 20px;
   margin: 0 auto;
   background-color: #f5f5f5;
@@ -32,7 +32,6 @@ form {
     }
 
     input {
-      flex: 1;
       padding: 8px;
       border: 1px solid #ccc;
       border-radius: 4px;
