--- a/authentication-app/src/styles.scss
+++ b/authentication-app/src/styles.scss
@@ -1,1 +1,23 @@
+* {
+  box-sizing: border-box;
+}
 
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+}
+
+app-root {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
+}
+
+router-outlet ~ * {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
